Edit now corrected (was using part of best_in_place) and flash messages got a greater z-index

--- a/app/assets/stylesheets/fragments.css.scss
+++ b/app/assets/stylesheets/fragments.css.scss
@@ -7,6 +7,12 @@
   margin-right: auto ;
 }
 
+#flash {
+  position:absolute;
+  top: 5px;
+  z-index:10;
+}
+
 .fragment {
   margin: 2px;
   padding: 4px;
